styles fix and image align

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   --background-green: #ebf4dc;
   --border-green: #d4dcc4;
   --text-gray: #c0c0c0;
+  --lighter-gray: #ececec;
   --text-color: #000000;
   --background-color: #ffffff;
   --z-tooltip: 10;
