--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,6 +4,8 @@
     border-top: 1.5px solid rgb(215, 215, 215);
     justify-content: flex-end;
     align-items: flex-end;
+    background-color: #fff;
+    z-index: 100;
 }
 
 .footer-row {
